Update code links

--- a/index.Rmd
+++ b/index.Rmd
@@ -11,5 +11,5 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Table of Contents
 
-- January 27th, 2017 -- [Introduction to ODEs in R](./jan27-intro-to-odes/index.html) [[PDF](./jan25-intro-to-r/assets/jan25-intro-to-r.pdf)]
+- January 27th, 2017 -- [Introduction to ODEs in R](./jan27-intro-to-odes/index.html)  [[PDF](./jan25-intro-to-r/assets/jan25-intro-to-r.pdf)] | [[Code](https://github.com/mkiang/epi501_review/tree/master/jan27-intro-to-odes/code)]
 - January 25th, 2017 -- [Introduction to R](./jan25-intro-to-r/index.html)
