--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "EPI 501 Dynamics of Infectious Disease (Review)"
 author: "Mathew Kiang"
-date: "1/30/2017"
+# date: "1/31/2017"
 output: html_document
 ---
 
@@ -9,7 +9,18 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## Table of Contents
+## Table of Contents (reverse chronological)
 
-- January 27th, 2017 -- [Introduction to ODEs in R](./jan27-intro-to-odes/index.html)  [[PDF](./jan25-intro-to-r/assets/jan25-intro-to-r.pdf)] | [[Code](https://github.com/mkiang/epi501_review/tree/master/jan27-intro-to-odes/code)]
-- January 25th, 2017 -- [Introduction to R](./jan25-intro-to-r/index.html)
+- Week 2 (February 3, 2017 lab)
+    - Measles worksheet [coming soon]
+
+- Week 1 (January 27, 2017 lab) 
+    - [Introduction to ODEs in R](./jan27-intro-to-odes/index.html)  [[PDF](./jan25-intro-to-r/assets/jan25-intro-to-r.pdf)] | [[Code](https://github.com/mkiang/epi501_review/tree/master/jan27-intro-to-odes/code)]
+        - [SIR model line-by-line](./jan27-intro-to-odes/index.html#13)
+        - [Plotting simulations](./jan27-intro-to-odes/index.html#58)
+        - [Make an SI model](./jan27-intro-to-odes/index.html#68)
+        - [Make an SIS model](./jan27-intro-to-odes/index.html#74)
+        - [Make an SIR with births/deaths](./jan27-intro-to-odes/index.html#77)
+
+- Week 0 (January 23, 2017) 
+    - [Introduction to R](./jan25-intro-to-r/index.html)
