--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "EPI 501 Dynamics of Infectious Disease (Review)"
 author: "Mathew Kiang"
-# date: "1/31/2017"
+date: "`r format(Sys.time(), '%B %d, %Y')`"
 output: html_document
 ---
 
@@ -35,3 +35,4 @@ knitr::opts_chunk$set(echo = TRUE)
 
 - Week 0 (January 23, 2017) 
     - [Introduction to R](./jan25-intro-to-r/index.html)
+    - [Shiny app for ODE models](https://mkiang.shinyapps.io/DiseaseDynamics/)
