--- a/jan30-timesteps-measles-seir/index.Rmd
+++ b/jan30-timesteps-measles-seir/index.Rmd
@@ -430,7 +430,7 @@ max(sim_cpox$I)
 ```
 ---
 class: center, middle, inverse
-# Question 3
+# Question 4
 ## SEIR Models
 ---
 class: center, middle
@@ -487,7 +487,7 @@ SIR <- function(t, x, parms){
 simulation <- as.data.frame(ode(y = inits, times = dt, 
                                 func = SIR, parms = parms))
 ```
-- Introduce a new parameter `a` which will represent the infected-but-not-infectious period.
+- Introduce a new parameter `a` be the rate from latent to infectious.
 --
 
 - If the duration of the latent period is 12 days, what is the rate per day?
