--- a/index.Rmd
+++ b/index.Rmd
@@ -12,6 +12,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ## Table of Contents (reverse chronological)
 
 - Week 2 (February 3, 2017 lab) -- Revised 2/1/2017
+    - [Ebola worksheet](./feb-1-ebola/index.html) [[PDF](./feb-1-ebola/ebola-handout.pdf)] | [[Code](https://github.com/mkiang/epi501_review/tree/master/feb-1-ebola/code)]
     - [Measles worksheet](./jan30-timesteps-measles-seir/index.html) [[PDF](./jan30-timesteps-measles-seir/measles-handout.pdf)] | [[Code](https://github.com/mkiang/epi501_review/tree/master/jan30-timesteps-measles-seir/code)]
         - [Measles SIR](./jan30-timesteps-measles-seir/index.html#4)
         - [Time-steps are arbitrary](./jan30-timesteps-measles-seir/index.html#12)
