Make a common errors page

--- a/index.Rmd
+++ b/index.Rmd
@@ -11,6 +11,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Table of Contents (reverse chronological)
 
+- [**Common Error Messages**](./errors.htlm)
+
 - Week 2 (February 3, 2017 lab) -- Revised 2/3/2017
     - [Ebola worksheet](./feb-1-ebola/index.html) [[PDF](./feb-1-ebola/ebola-handout.pdf)] | [[Code](https://github.com/mkiang/epi501_review/tree/master/feb-1-ebola/code)]
         - [SEIR with case fatality](./feb-1-ebola/index.html#4)
