--- a/index.Rmd
+++ b/index.Rmd
@@ -12,9 +12,9 @@ knitr::opts_chunk$set(echo = TRUE)
 ## Table of Contents (reverse chronological)
 - [**Common Error Messages**](./errors.html)
 
-- Week 0 (January 27, 2017) 
-    - [Swirl Tutorial](http://swirlstats.com/students.html)
+- Week 0 (January 16, 2018) 
     - [Software Carpentry](https://swcarpentry.github.io/r-novice-gapminder/): Strongly recommend you do sections 0 to 3 if you've never used `R` before. This will get you up and running with the software and introduce you to RStudio.
+    - [Swirl Tutorial](http://swirlstats.com/students.html): If you've never used `R` before, we highly recommend doing this tutorial and the SW tutorial (above).
     - [Shiny app for ODE models](https://mkiang.shinyapps.io/DiseaseDynamics/): Example of what we'll be doing throughout the course.
 
 ## Source / Archive
