--- a/index.Rmd
+++ b/index.Rmd
@@ -15,8 +15,9 @@ knitr::opts_chunk$set(echo = TRUE)
 - Week 0 (January 16, 2018) 
     - [Software Carpentry](https://swcarpentry.github.io/r-novice-gapminder/): Strongly recommend you do sections 0 to 3 if you've never used `R` before. This will get you up and running with the software and introduce you to RStudio.
     - [Swirl Tutorial](http://swirlstats.com/students.html): If you've never used `R` before, we highly recommend doing this tutorial and the SW tutorial (above).
+    - [Super quick `R` Review](./spring_2017/jan25-intro-to-r/index.html): If you've used `R` in the past but need a refresher, this is a tutorial I made for Spring 2017. It is not nearly as thorough as the above two.
     - [Shiny app for ODE models](https://mkiang.shinyapps.io/DiseaseDynamics/): Example of what we'll be doing throughout the course.
 
 ## Source / Archive
 - You can find the source code along with all class code and PDFs on [this project's GitHub page](https://github.com/mkiang/epi501_review).
-- You can find slids from [Spring 2017 here](./spring_2017/index.html).
+- You can find slides from [Spring 2017 here](./spring_2017/index.html).
