--- a/index.Rmd
+++ b/index.Rmd
@@ -12,6 +12,11 @@ knitr::opts_chunk$set(echo = TRUE)
 ## Table of Contents (reverse chronological)
 - [**Common Error Messages**](./errors.html)
 
+- Week 1 (January 22, 2018)
+    - [Introduction to `R`, discrete time models, non-infectious ODE models.](./20180124_intro_to_R_headaches/index.html) 
+    - Download [`headache_exercises.zip`](./exercises/01_headaches/headache_exercises.zip)
+    - Annotated code [Coming soon]
+
 - Week 0 (January 16, 2018) 
     - [Software Carpentry](https://swcarpentry.github.io/r-novice-gapminder/): Strongly recommend you do sections 0 to 3 if you've never used `R` before. This will get you up and running with the software and introduce you to RStudio.
     - [Swirl Tutorial](http://swirlstats.com/students.html): If you've never used `R` before, we highly recommend doing this tutorial and the SW tutorial (above).
